2025-08-08  Zhengyi Fu  <i@fuzy.me>

	Add comprehensive side window management

	* init.el (+toggle-side-window): New function.  Generic function to
	toggle side windows with proper size restoration using window state
	persistence.
	(+toggle-side-window-left, +toggle-side-window-right,
	+toggle-side-window-above, +toggle-side-window-below): New commands.
	Specialized commands for toggling side windows on each side of the frame.
	(window-prefix-map): Update key bindings for side window toggles.
	(toggle-left-side-window): Remove function.  Replaced by new side window
	management system.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* init.el: Add more key bindings for windows-x.el.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* packages.el: Add claude-code-ide.el.

2025-08-08  Zhengyi Fu  <i@fuzy.me>

	* init.el: Do not start server automatically.

2025-08-07  Zhengyi Fu  <i@fuzy.me>

	Add OSC 8 support to comint

	* init.el (+handle-osc-8, +comint-handle-osc-8): New functions.

2025-08-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (+custom-faces): Add some color to tab-line in dark
	mode.

2025-08-07  Zhengyi Fu  <i@fuzy.me>

	* init.el (+init-fontsets): Specify font for emoji.

2025-08-06  Zhengyi Fu  <i@fuzy.me>

	* init.el (+elfeed-display-buffer): Ensure the show buffer is at
	the bottom.

2025-08-06  Zhengyi Fu  <i@fuzy.me>

	Prevent implied frame resize when switching themes

	* init.el (+inhibit-implied-resize): New function.
	(enable-theme, disable-theme): Adviced.

2025-08-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el ("Moonshot"): Add model
	"kimi-k2-turbo-preview".
	(deepseek-translator): Change temperature to 1.3
	(deepseek-assistant): New preset.
	(+gptel-shellcheck-fix): Use `ensure-list'.  Force use of tools.

	* site-lisp/treesit-config.el (treesit-language-source-alist):
	Update recipe for c and markdown.

	* init.el: Bind C-c R to `rg-menu'.
	(treesit): Load treesit-config.el.

2025-08-06  Zhengyi Fu  <i@fuzy.me>
